@@ -51,6 +51,13 @@
             <artifactId>javafx-base</artifactId>
             <version>24</version>
         </dependency>
+        
+        <!-- SQLite JDBC Driver -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.45.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -64,12 +71,25 @@
                     <target>24</target>
                 </configuration>
             </plugin>
+            
+            <!-- Plugin para ejecutar JavaFX -->
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>application.App</mainClass>
+                </configuration>
+            </plugin>
+            
+            <!-- Plugin para ejecutar con exec -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <mainClass>application.App</mainClass>
+                    <commandlineArgs>--module-path ${javafx.runtime.path} --add-modules javafx.controls,javafx.graphics,javafx.base,javafx.media,javafx.swing,javafx.fxml</commandlineArgs>
                 </configuration>
             </plugin>
         </plugins>
